Fix bug causing duplicate ids if they are generated too fast

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/jwarkentin/flaky/issues"
   },
-  "homepage": "https://github.com/jwarkentin/flaky"
+  "homepage": "https://github.com/jwarkentin/flaky",
+  "devDependencies": {
+    "hashtable": "^1.0.3"
+  }
 }
